--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-markup-hw-01</title>
+    <title>goit-markup-hw-02</title>
   </head>
   <body>
     <!--Шапка сайта-->
@@ -135,7 +135,11 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/XggsH2f8RYmRA1K9A" class="contant-link"
+            <a
+              href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
+              target="_blank"
+              rel="noopener noreferrer nofollow"
+              class="contant-link"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
