--- a/index.html
+++ b/index.html
@@ -5,39 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-02</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
-
-        <ul>
-          <li><a href="#">Студія</a></li>
-          <li><a href="#">Портфоліо</a></li>
-          <li><a href="#">Контакти</a></li>
+        <a href="./index.html" class="logo">
+          <span class="logo-web">Web</span>
+          <span class="logo-studio">Studio</span>
+        </a>
+        <ul class="site-nav list">
+          <li><a href="#" class="link">Студія</a></li>
+          <li><a href="#" class="link">Портфоліо</a></li>
+          <li><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="connection list">
         <li>
-          <a href="tel:+380961111111" class="contant-link">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="connection-tel">+38 096 111 11 11</a>
         </li>
         <li>
-          <a href="mailto:info@devstudio.com" class="contant-link">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="connection-mail">info@devstudio.com</a>
         </li>
       </ul>
     </header>
-    <!--Банер Герой с большим фоном-->
+    <!-- Main- Основной контент !!! -->
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
+      <!--Банер Герой с большим фоном-->
+      <section class="section-hero">
+        <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
 
         <button type="button">Замовити послугу</button>
       </section>
       <!--Особливості-->
-      <section>
-        <h2>Наші переваги</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Наші переваги</h2> <!--Спрятать!!! -->
+        <ul class="feature-list">
           <li>
             <h3>Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -57,8 +61,8 @@
         </ul>
       </section>
       <!--Чим ми займаємося-->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -87,8 +91,8 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section>
-        <h2>Наша команда</h2>
+      <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
           <li>
             <img
