--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>goit-markup-hw-02</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -16,18 +24,14 @@
           <span class="logo-studio">Studio</span>
         </a>
         <ul class="site-nav list">
-          <li><a href="#" class="link">Студія</a></li>
-          <li><a href="#" class="link">Портфоліо</a></li>
+          <li><a href="./index.html" class="link current">Студія</a></li>
+          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
           <li><a href="#" class="link">Контакти</a></li>
         </ul>
       </nav>
       <ul class="connection list">
-        <li>
-          <a href="tel:+380961111111" class="connection-tel">+38 096 111 11 11</a>
-        </li>
-        <li>
-          <a href="mailto:info@devstudio.com" class="connection-mail">info@devstudio.com</a>
-        </li>
+        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
       </ul>
     </header>
     <!-- Main- Основной контент !!! -->
@@ -36,26 +40,27 @@
       <section class="section-hero">
         <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
 
-        <button type="button">Замовити послугу</button>
+        <button type="button" class="buttom">Замовити послугу</button>
       </section>
-      <!--Особливості-->
+      <!--Наші переваги-->
       <section class="section">
-        <h2 class="section-title">Наші переваги</h2> <!--Спрятать!!! -->
-        <ul class="feature-list">
+        <h2 class="visually-hidden">Наші переваги</h2>
+        <!--Спрятать!!! -->
+        <ul class="feature-list list">
           <li>
-            <h3>Увага до деталей</h3>
+            <h3 class="feature-list-title">Увага до деталей</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
+            <h3 class="feature-list-title">Пунктуальність</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>Планування</h3>
+            <h3 class="feature-list-title">Планування</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>Сучасні технології</h3>
+            <h3 class="feature-list-title">Сучасні технології</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
@@ -63,7 +68,7 @@
       <!--Чим ми займаємося-->
       <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul>
+        <ul class="work-list list">
           <li>
             <img
               src="./images/img1.jpg"
@@ -91,9 +96,9 @@
         </ul>
       </section>
       <!--Наша команда-->
-      <section class="section">
+      <section class="section-team">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team list">
           <li>
             <img
               src="./images/teamcard1.jpg"
@@ -101,12 +106,12 @@
               class="photo"
               width="270"
             />
-            <h3>Ігор Дем'яненко</h3>
+            <h3 class="team-name">Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/teamcard2.jpg" alt="фото Ольги Рєпіної" class="photo" width="270" />
-            <h3>Ольга Рєпіна</h3>
+            <h3 class="team-name">Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -116,7 +121,7 @@
               class="photo"
               width="270"
             />
-            <h3>Микола Тарасов</h3>
+            <h3 class="team-name">Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -126,33 +131,31 @@
               class="photo"
               width="270"
             />
-            <h3>Михайло Єрмаков</h3>
+            <h3 class="team-name">Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
-    <footer>
-      <a href="./index.html"> WebStudio </a>
-
-      <address>
-        <ul>
+    <footer class="footer">
+      <a href="./index.html" class="logo">
+        <span class="logo-web">Web</span>
+        <span class="logo-studio">Studio</span>
+      </a>
+      <address class="address">
+        <ul class="address list">
           <li>
             <a
               href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
               target="_blank"
               rel="noopener noreferrer nofollow"
-              class="contant-link"
+              class="map-link"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li>
-            <a href="tel:+380961111111" class="contant-link">+38 096 111 11 11</a>
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contant-link">info@devstudio.com</a>
-          </li>
+          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
         </ul>
       </address>
     </footer>
