--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="./index.html" class="logo">
-          <span class="logo-web">Web</span>
-          <span class="logo-studio">Studio</span>
+        <a class="logo" href="./index.html">
+          <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link current">Студія</a></li>
@@ -49,19 +48,19 @@
         <ul class="feature-list list">
           <li>
             <h3 class="feature-list-title">Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p class="feature-list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
             <h3 class="feature-list-title">Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="feature-list-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
             <h3 class="feature-list-title">Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="feature-list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <h3 class="feature-list-title">Сучасні технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="feature-list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
@@ -107,12 +106,12 @@
               width="270"
             />
             <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p class="team-name-text">Product Designer</p>
           </li>
           <li>
             <img src="./images/teamcard2.jpg" alt="фото Ольги Рєпіної" class="photo" width="270" />
             <h3 class="team-name">Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p class="team-name-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -122,7 +121,7 @@
               width="270"
             />
             <h3 class="team-name">Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p class="team-name-text">Marketing</p>
           </li>
           <li>
             <img
@@ -132,7 +131,7 @@
               width="270"
             />
             <h3 class="team-name">Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p class="team-name-text">UI Designer</p>
           </li>
         </ul>
       </section>
