--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,8 @@
     <!--Шапка сайта-->
     <header>
       <nav>
-        <a href="./index.html" class="logo">
-          <span class="logo-web">Web</span>
-          <span class="logo-studio">Studio</span>
+        <a class="logo" href="./index.html">
+          <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
         </a>
         <ul class="site-nav list">
           <li><a href="./index.html" class="link">Студія</a></li>
@@ -37,95 +36,99 @@
     </header>
     <!-- Main- Основной контент !!! -->
     <main>
-      <h1 class="visually-hidden">Наша робота</h1>
-      <ul class="list">
-        <li><button class="buttom-portfolio" type="button">Усі</button></li>
-        <li><button class="buttom-portfolio" type="button">Вебсайти</button></li>
-        <li><button class="buttom-portfolio" type="button">Додатки</button></li>
-        <li><button class="buttom-portfolio" type="button">Дизайн</button></li>
-        <li><button class="buttom-portfolio" type="button">Маркетинг</button></li>
-      </ul>
-      <ul class="list">
-        <li>
-          <href>
-            <img src="./images/portfolio/img-texnokrak.jpg" alt="фото ноутбука" width="370" />
-            <h2 class="section-title-portfolio">Технокряк</h2>
-            <p>Веб-сайт</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img
-              src="./images/portfolio/img-poster.jpg"
-              alt="чоловіки грають в баскетбол"
-              width="370"
-            />
-            <h2 class="section-title-portfolio">Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img
-              src="./images/portfolio/img-seafood.jpg"
-              alt="лого компанії та назва"
-              width="370"
-            />
-            <h2 class="section-title-portfolio">Ресторан Seafood</h2>
-            <p>Додаток</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img src="./images/portfolio/img-prime.jpg" alt="фото навушників" width="370" />
-            <h2 class="section-title-portfolio">Проєкт Prime<</h2>
-            <p>Маркетинг</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img src="./images/portfolio/img-boxes.jpg" alt="дві коробки" width="370" />
-            <h2 class="section-title-portfolio">Проєкт Boxes</h2>
-            <p>Додаток</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img src="./images/portfolio/img-inspiration.jpg" alt="фото монітору" width="370" />
-            <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img
-              src="./images/portfolio/img-limited.jpg"
-              alt="розгорнутий журнал с фотографіями"
-              width="370"
-            />
-            <h2 class="section-title-portfolio">Видання Limited Edition</h2>
-            <p>Дизайн</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img src="./images/portfolio/img-lab.jpg" alt="мотузка з листочком" width="370" />
-            <h2 class="section-title-portfolio">Проєкт LAB</h2>
-            <p>Додаток</p>
-          </href>
-        </li>
-        <li>
-          <href>
-            <img
-              src="./images/portfolio/img-growing.jpg"
-              alt="людина працює за ноутбуком"
-              width="370"
-            />
-            <h2 class="section-title-portfolio">Growing Business</h2>
-            <p>Додаток</p>
-          </href>
-        </li>
-      </ul>
+      <section>
+        <h1 class="visually-hidden">Наша робота</h1>
+        <ul class="list">
+          <li><button class="buttom-portfolio" type="button">Усі</button></li>
+          <li><button class="buttom-portfolio" type="button">Вебсайти</button></li>
+          <li><button class="buttom-portfolio" type="button">Додатки</button></li>
+          <li><button class="buttom-portfolio" type="button">Дизайн</button></li>
+          <li><button class="buttom-portfolio" type="button">Маркетинг</button></li>
+        </ul>
+      </section>
+      <section>
+        <ul class="list">
+          <li>
+            <href>
+              <img src="./images/portfolio/img-texnokrak.jpg" alt="фото ноутбука" width="370" />
+              <h2 class="section-title-portfolio">Технокряк</h2>
+              <p class="section-title-portfolio-text">Веб-сайт</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img
+                src="./images/portfolio/img-poster.jpg"
+                alt="чоловіки грають в баскетбол"
+                width="370"
+              />
+              <h2 class=" class="section-title-portfolio-text"">Постер New Orlean vs Golden Star</h2>
+              <p class="section-title-portfolio-text">Дизайн</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img
+                src="./images/portfolio/img-seafood.jpg"
+                alt="лого компанії та назва"
+                width="370"
+              />
+              <h2 class="section-title-portfolio">Ресторан Seafood</h2>
+              <p class="section-title-portfolio-text">Додаток</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img src="./images/portfolio/img-prime.jpg" alt="фото навушників" width="370" />
+              <h2 class="section-title-portfolio">Проєкт Prime<</h2>
+              <p class="section-title-portfolio-text">Маркетинг</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img src="./images/portfolio/img-boxes.jpg" alt="дві коробки" width="370" />
+              <h2 class="section-title-portfolio">Проєкт Boxes</h2>
+              <p class="section-title-portfolio-text">Додаток</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img src="./images/portfolio/img-inspiration.jpg" alt="фото монітору" width="370" />
+              <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
+              <p class="section-title-portfolio-text">Веб-сайт</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img
+                src="./images/portfolio/img-limited.jpg"
+                alt="розгорнутий журнал с фотографіями"
+                width="370"
+              />
+              <h2 class="section-title-portfolio">Видання Limited Edition</h2>
+              <p class="section-title-portfolio-text">Дизайн</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img src="./images/portfolio/img-lab.jpg" alt="мотузка з листочком" width="370" />
+              <h2 class="section-title-portfolio">Проєкт LAB</h2>
+              <p class="section-title-portfolio-text">Додаток</p>
+            </href>
+          </li>
+          <li>
+            <href>
+              <img
+                src="./images/portfolio/img-growing.jpg"
+                alt="людина працює за ноутбуком"
+                width="370"
+              />
+              <h2 class="section-title-portfolio">Growing Business</h2>
+              <p class="section-title-portfolio-text">Додаток</p>
+            </href>
+          </li>
+        </ul>
+      </section>
     </main>
     <!--Футер-->
     <footer class="footer">
