--- a/portfolio.html
+++ b/portfolio.html
@@ -45,8 +45,7 @@
           <li><button class="buttom-portfolio" type="button">Дизайн</button></li>
           <li><button class="buttom-portfolio" type="button">Маркетинг</button></li>
         </ul>
-      </section>
-      <section>
+
         <ul class="list">
           <li>
             <href>
@@ -62,7 +61,7 @@
                 alt="чоловіки грають в баскетбол"
                 width="370"
               />
-              <h2 class=" class="section-title-portfolio-text"">Постер New Orlean vs Golden Star</h2>
+              <h2 class="class=" section-title-portfolio-text>Постер New Orlean vs Golden Star</h2>
               <p class="section-title-portfolio-text">Дизайн</p>
             </href>
           </li>
@@ -133,8 +132,7 @@
     <!--Футер-->
     <footer class="footer">
       <a href="./index.html" class="logo">
-        <span class="logo-web">Web</span>
-        <span class="logo-studio">Studio</span>
+        <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
       </a>
       <address class="address">
         <ul class="address list">
