--- a/index.html
+++ b/index.html
@@ -13,150 +13,190 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
     <!--Шапка сайта-->
     <header>
-      <nav>
-        <a class="logo" href="./index.html">
-          <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-        </a>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студія</a></li>
-          <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="connection list">
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-      </ul>
+      <section class="section-header">
+        <div class="container">
+          <nav>
+            <a class="logo" href="./index.html">
+              <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+            </a>
+            <ul class="site-nav list">
+              <li><a href="./index.html" class="link current">Студія</a></li>
+              <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+              <li><a href="#" class="link">Контакти</a></li>
+            </ul>
+          </nav>
+          <ul class="connection list">
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          </ul>
+        </div>
+      </section>
     </header>
+
     <!-- Main- Основной контент !!! -->
     <main>
       <!--Банер Герой с большим фоном-->
       <section class="section-hero">
-        <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
-
-        <button type="button" class="buttom">Замовити послугу</button>
+        <div class="container">
+          <h1 class="section-hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="buttom">Замовити послугу</button>
+        </div>
       </section>
+
       <!--Наші переваги-->
       <section class="section">
-        <h2 class="visually-hidden">Наші переваги</h2>
-        <!--Спрятать!!! -->
-        <ul class="feature-list list">
-          <li>
-            <h3 class="feature-list-title">Увага до деталей</h3>
-            <p class="feature-list-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-          </li>
-          <li>
-            <h3 class="feature-list-title">Пунктуальність</h3>
-            <p class="feature-list-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-          </li>
-          <li>
-            <h3 class="feature-list-title">Планування</h3>
-            <p class="feature-list-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-          </li>
-          <li>
-            <h3 class="feature-list-title">Сучасні технології</h3>
-            <p class="feature-list-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Наші переваги</h2>
+          <!--Спрятать!!! -->
+          <ul class="feature-list list">
+            <li>
+              <h3 class="feature-list-title">Увага до деталей</h3>
+              <p class="feature-list-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-list-title">Пунктуальність</h3>
+              <p class="feature-list-text">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-list-title">Планування</h3>
+              <p class="feature-list-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3 class="feature-list-title">Сучасні технології</h3>
+              <p class="feature-list-text">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
+
       <!--Чим ми займаємося-->
       <section class="section">
-        <h2 class="section-title">Чим ми займаємося</h2>
-        <ul class="work-list list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="людина працюе на планшеті"
-              class="photo"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="людина працює за ноутбуком і телефоном"
-              class="photo"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="Людина працює стіліусом на плашеті"
-              class="photo"
-              width="370"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Чим ми займаємося</h2>
+          <ul class="work-list list">
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="людина працюе на планшеті"
+                class="photo"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="людина працює за ноутбуком і телефоном"
+                class="photo"
+                width="370"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img3.jpg"
+                alt="Людина працює стіліусом на плашеті"
+                class="photo"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
+
       <!--Наша команда-->
       <section class="section-team">
-        <h2 class="section-title">Наша команда</h2>
-        <ul class="team list">
-          <li>
-            <img
-              src="./images/teamcard1.jpg"
-              alt="фото Ігора Дем'яненко"
-              class="photo"
-              width="270"
-            />
-            <h3 class="team-name">Ігор Дем'яненко</h3>
-            <p class="team-name-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/teamcard2.jpg" alt="фото Ольги Рєпіної" class="photo" width="270" />
-            <h3 class="team-name">Ольга Рєпіна</h3>
-            <p class="team-name-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/teamcard3.jpg"
-              alt="фото Миколи Тарасова"
-              class="photo"
-              width="270"
-            />
-            <h3 class="team-name">Микола Тарасов</h3>
-            <p class="team-name-text">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/teamcard4.jpg"
-              alt="фото Михайла Єрмакова"
-              class="photo"
-              width="270"
-            />
-            <h3 class="team-name">Михайло Єрмаков</h3>
-            <p class="team-name-text">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="section-title">Наша команда</h2>
+          <ul class="team list">
+            <li>
+              <img
+                src="./images/teamcard1.jpg"
+                alt="фото Ігора Дем'яненко"
+                class="photo"
+                width="270"
+              />
+              <h3 class="team-name">Ігор Дем'яненко</h3>
+              <p class="team-name-text">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="./images/teamcard2.jpg"
+                alt="фото Ольги Рєпіної"
+                class="photo"
+                width="270"
+              />
+              <h3 class="team-name">Ольга Рєпіна</h3>
+              <p class="team-name-text">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="./images/teamcard3.jpg"
+                alt="фото Миколи Тарасова"
+                class="photo"
+                width="270"
+              />
+              <h3 class="team-name">Микола Тарасов</h3>
+              <p class="team-name-text">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="./images/teamcard4.jpg"
+                alt="фото Михайла Єрмакова"
+                class="photo"
+                width="270"
+              />
+              <h3 class="team-name">Михайло Єрмаков</h3>
+              <p class="team-name-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+
     <!--Футер-->
     <footer class="footer">
-      <a href="./index.html" class="logo">
-        <span class="logo-web">Web</span>
-        <span class="logo-studio">Studio</span>
-      </a>
-      <address class="address">
-        <ul class="address list">
-          <li>
-            <a
-              href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="map-link"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-          <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-        </ul>
-      </address>
+      <section>
+        <div class="container">
+          <a href="./index.html" class="logo">
+            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+          </a>
+          <address class="address">
+            <ul class="address list">
+              <li>
+                <a
+                  href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="map-link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+              <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+            </ul>
+          </address>
+        </div>
+      </section>
     </footer>
   </body>
 </html>
