--- a/portfolio.html
+++ b/portfolio.html
@@ -13,27 +13,39 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <!--Cтраница portfolio.html -->
   <body>
     <!--Шапка сайта-->
     <header>
-      <nav>
-        <a class="logo" href="./index.html">
-          <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-        </a>
-        <ul class="site-nav list">
-          <li><a href="./index.html" class="link">Студія</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
-          <li><a href="#" class="link">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="connection list">
-        <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-      </ul>
+      <section class="section-header">
+        <div class="container">
+          <nav>
+            <a class="logo" href="./index.html">
+              <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+            </a>
+            <ul class="site-nav list">
+              <li><a href="./index.html" class="link">Студія</a></li>
+              <li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+              <li><a href="#" class="link">Контакти</a></li>
+            </ul>
+          </nav>
+          <ul class="connection list">
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+          </ul>
+        </div>
+      </section>
     </header>
+
     <!-- Main- Основной контент !!! -->
     <main>
       <section>
