--- a/portfolio.html
+++ b/portfolio.html
@@ -24,37 +24,35 @@
   <body>
     <!--Шапка сайта-->
     <header>
-      <section class="section-header">
-        <div class="container">
-          <nav class="main-nav">
-            <a class="logo" href="./index.html">
-              <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-            </a>
-            <ul class="site-nav list">
-              <li class="item">
-                <a href="./index.html" class="link current">Студія</a>
-              </li>
-              <li class="item">
-                <a href="./portfolio.html" class="link">Портфоліо</a>
-              </li>
-              <li class="item"><a href="#" class="link">Контакти</a></li>
-            </ul>
-            <ul class="connection list">
-              <li class="item">
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-              </li>
-              <li class="item">
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </section>
+      <div class="container">
+        <nav class="main-nav">
+          <a class="logo" href="./index.html">
+            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+          </a>
+          <ul class="site-nav list">
+            <li class="item">
+              <a href="./index.html" class="link current">Студія</a>
+            </li>
+            <li class="item">
+              <a href="./portfolio.html" class="link">Портфоліо</a>
+            </li>
+            <li class="item"><a href="#" class="link">Контакти</a></li>
+          </ul>
+          <ul class="connection list">
+            <li class="item">
+              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            </li>
+            <li class="item">
+              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <!-- Main- Основной контент !!! -->
     <main>
-      <section>
+      <section class="section-portfolio">
         <div class="container">
           <div class="container-filter">
             <h1 class="visually-hidden">Наша робота</h1>
@@ -83,8 +81,10 @@
                     alt="чоловіки грають в баскетбол"
                     width="370"
                   />
-                  <h2 class="section-title-portfolio">Постер New Orlean vs Golden Star</h2>
-                  <p class="section-title-portfolio-text">Дизайн</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Постер New Orlean vs Golden Star</h2>
+                    <p class="section-title-portfolio-text">Дизайн</p>
+                  </div>
                 </a>
               </li>
               <li class="filter-card">
@@ -94,22 +94,28 @@
                     alt="лого компанії та назва"
                     width="370"
                   />
-                  <h2 class="section-title-portfolio">Ресторан Seafood</h2>
-                  <p class="section-title-portfolio-text">Додаток</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Ресторан Seafood</h2>
+                    <p class="section-title-portfolio-text">Додаток</p>
+                  </div>
                 </a>
               </li>
               <li class="filter-card">
                 <a href="#" class="link-portfolio">
                   <img src="./images/portfolio/img-prime.jpg" alt="фото навушників" width="370" />
-                  <h2 class="section-title-portfolio">Проєкт Prime</h2>
-                  <p class="section-title-portfolio-text">Маркетинг</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Проєкт Prime</h2>
+                    <p class="section-title-portfolio-text">Маркетинг</p>
+                  </div>
                 </a>
               </li>
               <li class="filter-card">
                 <a href="#" class="link-portfolio">
                   <img src="./images/portfolio/img-boxes.jpg" alt="дві коробки" width="370" />
-                  <h2 class="section-title-portfolio">Проєкт Boxes</h2>
-                  <p class="section-title-portfolio-text">Додаток</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Проєкт Boxes</h2>
+                    <p class="section-title-portfolio-text">Додаток</p>
+                  </div>
                 </a>
               </li>
               <li class="filter-card">
@@ -119,8 +125,10 @@
                     alt="фото монітору"
                     width="370"
                   />
-                  <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
-                  <p class="section-title-portfolio-text">Веб-сайт</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Inspiration has no Borders</h2>
+                    <p class="section-title-portfolio-text">Веб-сайт</p>
+                  </div>
                 </a>
               </li>
               <li class="filter-card">
@@ -130,15 +138,19 @@
                     alt="розгорнутий журнал с фотографіями"
                     width="370"
                   />
-                  <h2 class="section-title-portfolio">Видання Limited Edition</h2>
-                  <p class="section-title-portfolio-text">Дизайн</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Видання Limited Edition</h2>
+                    <p class="section-title-portfolio-text">Дизайн</p>
+                  </div>
                 </a>
               </li>
               <li class="filter-card">
                 <a href="#" class="link-portfolio">
                   <img src="./images/portfolio/img-lab.jpg" alt="мотузка з листочком" width="370" />
-                  <h2 class="section-title-portfolio">Проєкт LAB</h2>
-                  <p class="section-title-portfolio-text">Додаток</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Проєкт LAB</h2>
+                    <p class="section-title-portfolio-text">Додаток</p>
+                  </div>
                 </a>
               </li>
               <li class="filter-card">
@@ -148,8 +160,10 @@
                     alt="людина працює за ноутбуком"
                     width="370"
                   />
-                  <h2 class="section-title-portfolio">Growing Business</h2>
-                  <p class="section-title-portfolio-text">Додаток</p>
+                  <div class="filter-card-div">
+                    <h2 class="section-title-portfolio">Growing Business</h2>
+                    <p class="section-title-portfolio-text">Додаток</p>
+                  </div>
                 </a>
               </li>
             </ul>
@@ -159,34 +173,32 @@
     </main>
     <!--Футер-->
     <footer class="footer">
-      <section>
-        <div class="container">
-          <div class="container-footer">
-            <a href="./index.html" class="logo">
-              <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
-            </a>
-            <address class="address-all">
-              <ul class="address list">
-                <li>
-                  <a
-                    href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
-                    target="_blank"
-                    rel="noopener noreferrer nofollow"
-                    class="map-link"
-                    >м. Київ, пр-т Лесі Українки, 26</a
-                  >
-                </li>
-                <li>
-                  <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
-                </li>
-                <li>
-                  <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                </li>
-              </ul>
-            </address>
-          </div>
+      <div class="container">
+        <div class="container-footer">
+          <a href="./index.html" class="logo">
+            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+          </a>
+          <address class="address-all">
+            <ul class="address list">
+              <li>
+                <a
+                  href="https://goo.gl/maps/XggsH2f8RYmRA1K9A"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  class="map-link"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+              </li>
+            </ul>
+          </address>
         </div>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
